--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   node:
-    image: node
+    image: katharostech/quasar-cli
     working_dir: /app
     ports:
       - 8080:8080
