--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
 version: '3'
-
 services:
-  node:
-    image: katharostech/quasar-cli
-    working_dir: /app
-    ports:
-      - 8080:8080
-    volumes:
-      - .:/app:cached
+  frontend:
+    build: .
+    ports: 
+      - "8080:8080"
+    volumes: 
+      - .:/home/node/app:rw
+    restart: "no"
+    command: sh
+    stdin_open: true
+    tty: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
