--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,28 @@
 {
   "presets": [
-    ["env", { "modules": false }],
-    "stage-3",
-    "es2015"
+    [
+      "@babel/preset-env", {
+        "modules": false,
+        "loose": false,
+        "useBuiltIns": "usage"
+      }
+    ],
+    [
+      "@babel/preset-stage-2", {
+        "modules": false,
+        "loose": false,
+        "useBuiltIns": true,
+        "decoratorsLegacy": true
+      }
+    ]
   ],
-  "plugins": ["syntax-dynamic-import"]
+  "plugins": [
+    [
+      "@babel/transform-runtime", {
+        "polyfill": false,
+        "regenerator": false
+      }
+    ]
+  ],
+  "comments": false
 }
