--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "todolist-frontend",
-  "description": "My Vue.js todolist",
-  "version": "1.0.0",
-  "author": "Guillaume Briday <guillaumebriday@gmail.com>",
-  "license": "MIT",
+  "name": "pizzaman-frontend",
+  "version": "0.0.1",
+  "description": "A Pizzaman app",
+  "productName": "Pizzaman App",
+  "cordovaId": "org.cordova.pizzaman.app",
+  "author": "",
   "private": true,
   "scripts": {
     "hot": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js --hot",
@@ -37,11 +38,6 @@
     "vuex": "^3.0.1",
     "webpack-merge": "^4.1.5"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
@@ -72,7 +68,9 @@
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "purgecss-webpack-plugin": "^1.4.0",
+    "quasar-cli": "^0.17.0",
     "sass-loader": "^7.0.3",
+    "strip-ansi": "=3.0.1",
     "style-loader": "^0.23.1",
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.21",
@@ -81,5 +79,15 @@
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
     "weekstart": "^1.0.0"
-  }
+  },
+  "engines": {
+    "node": ">= 8.9.0",
+    "npm": ">= 5.6.0",
+    "yarn": ">= 1.6.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ]
 }
