--- a/.babelrc
+++ b/.babelrc
@@ -1,28 +1,8 @@
 {
   "presets": [
-    [
-      "@babel/preset-env", {
-        "modules": false,
-        "loose": false,
-        "useBuiltIns": "usage"
-      }
-    ],
-    [
-      "@babel/preset-stage-2", {
-        "modules": false,
-        "loose": false,
-        "useBuiltIns": true,
-        "decoratorsLegacy": true
-      }
-    ]
+    ["env", { "modules": false }],
+    "stage-3",
+    "es2015"
   ],
-  "plugins": [
-    [
-      "@babel/transform-runtime", {
-        "polyfill": false,
-        "regenerator": false
-      }
-    ]
-  ],
-  "comments": false
+  "plugins": ["syntax-dynamic-import"]
 }
